--- a/html/motion-graphics.html
+++ b/html/motion-graphics.html
@@ -3,13 +3,13 @@
 
 <head>
     <!-- title -->
-    <title>POFO – Creative Agency, Corporate and Portfolio Multi-purpose Template</title>
+    <title>Motion Graphics - Boardroom Media</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
     <meta name="author" content="ThemeZaa">
     <!-- description -->
-    <meta name="description" content="POFO is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose agency and portfolio HTML5 template with 25 ready home page demos.">
+    <meta name="description" content="Boardroom Media">
     <!-- keywords -->
     <meta name="keywords" content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
     <!-- favicon -->
@@ -58,8 +58,7 @@
                     <!-- start logo -->
                     <div class="col-lg-2 col-md-2 col-xs-5" style="padding-right: 15px;">
                         <a href="index.html" title="Baordroom" class="logo">
-                            <img src="images/img/logo-boardroom612X226.png" data-at2x="images/img/logo-boardroom612x226.png" class="logo-dark default"
-                                alt="Boardroom">
+                            <img src="images/img/logo-boardroom612X226_media_motion.png" data-at2x="images/img/logo-boardroom612X226_media_motion.png" class="logo-dark default" alt="Boardroom">
                             <img src="images/img/boardroomnewlogo.png" data-at2x="images/img/boardroomnewlogo.png" alt="Boardroom" class="logo-light">
 
 
@@ -77,7 +76,8 @@
                         <div class="navbar-collapse collapse no-padding-right" id="navbar-collapse-toggle-1">
                             <ul id="accordion" class="nav navbar-nav navbar-center alt-font text-normal" data-in="fadeIn" data-out="fadeOut">
                                 <!-- start menu item -->
-                                <li class="dropdown megamenu-fw">
+
+                                <li class="dropdown megamenu-fw active">
                                     <a href="index.html">Home</a>
                                     <!-- start sub menu -->
 
@@ -85,17 +85,17 @@
 
                                 <!--  ===============================OUR SERVICES=================================       -->
 
-                                <li class="dropdown simple-dropdown active">
+                                <li class="dropdown simple-dropdown">
                                     <a href="javascript:void(0);">Our Services</a>
                                     <i class="fa fa-angle-down dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
                                     <!-- start sub menu -->
-                                    <ul class="dropdown-menu animated fadeOut" style="margin-top: -20px !important; top: 72px;" role="menu">
-                                        <li class="dropdown active">
+                                    <ul class="dropdown-menu animated" style="margin-top: -20px !important; top: 72px;" role="menu">
+                                        <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);">Webcasting Technology
                                                 <i class="fa fa-angle-right dropdown-toggle ang-right-top-55" data-toggle="dropdown" aria-hidden="true" aria-expanded="true"></i>
                                             </a>
                                             <ul class="dropdown-menu spacing-162 animated">
-                                                <li class="active">
+                                                <li>
                                                     <a href="AGM-webcasting.html">AGM Webcasting</a>
                                                 </li>
                                                 <li>
@@ -144,12 +144,18 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Content Writting</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="content-writting.html">Content Writing</a>
 
                                         </li>
 
                                     </ul>
                                 </li>
+
+                                <!-- =========================================Fintech-investor============================================= -->
+
+
+
+
 
 
                                 <!-- ==================================ENQUIRE==================================================== -->
@@ -158,8 +164,7 @@
                                     <a href="javascript:void(0);">Enquire</a>
                                     <i class="fa fa-angle-down dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
                                     <!-- start sub menu -->
-                                    <ul class="dropdown-menu spacing-115 animated fadeOut" style="margin-top: -20px !important; top: 72px; display: none; opacity: 1;"
-                                        role="menu">
+                                    <ul class="dropdown-menu spacing-115 animated" style="margin-top: -20px !important; top: 72px;" role="menu">
 
 
                                         <!--  ============================OUR SERVICES MORE DROPDOWN====================================       -->
@@ -204,7 +209,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="header-social-icon xs-display-none">
+                        <div class="header-social-icon xs-display-none" style="border-left:1px solid red;">
                             <a href="https://www.facebook.com/boardroommedia" title="Facebook" target="_blank">
                                 <i class="fa fa-facebook" aria-hidden="true"></i>
                             </a>
