--- a/html/update-contact-details.html
+++ b/html/update-contact-details.html
@@ -61,8 +61,7 @@
                     <!-- start logo -->
                     <div class="col-lg-2 col-md-2 col-xs-5" style="padding-right: 15px;">
                         <a href="index.html" title="Baordroom" class="logo">
-                            <img src="images/img/logo-boardroom612X226.png" data-at2x="images/img/logo-boardroom612x226.png" class="logo-dark default"
-                                alt="Boardroom">
+                            <img src="images/img/logo-boardroom612X226_media_motion.png" data-at2x="images/img/logo-boardroom612X226_media_motion.png" class="logo-dark default" alt="Boardroom">
                             <img src="images/img/boardroomnewlogo.png" data-at2x="images/img/boardroomnewlogo.png" alt="Boardroom" class="logo-light">
 
 
@@ -80,6 +79,7 @@
                         <div class="navbar-collapse collapse no-padding-right" id="navbar-collapse-toggle-1">
                             <ul id="accordion" class="nav navbar-nav navbar-center alt-font text-normal" data-in="fadeIn" data-out="fadeOut">
                                 <!-- start menu item -->
+
                                 <li class="dropdown megamenu-fw active">
                                     <a href="index.html">Home</a>
                                     <!-- start sub menu -->
@@ -92,7 +92,7 @@
                                     <a href="javascript:void(0);">Our Services</a>
                                     <i class="fa fa-angle-down dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
                                     <!-- start sub menu -->
-                                    <ul class="dropdown-menu animated fadeOut" style="top: 72px; display: none; opacity: 1;" role="menu">
+                                    <ul class="dropdown-menu animated" style="margin-top: -20px !important; top: 72px;" role="menu">
                                         <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);">Webcasting Technology
                                                 <i class="fa fa-angle-right dropdown-toggle ang-right-top-55" data-toggle="dropdown" aria-hidden="true" aria-expanded="true"></i>
@@ -111,68 +111,29 @@
                                         <!--  ============================OUR SERVICES MORE DROPDOWN====================================       -->
                                         <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="audio-interviews.html">Audio Production </a>
-                                            <!--
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="services-simple.html">Services simple</a></li>
-                                                    <li><a href="services-classic.html">Services classic</a></li>
-                                                    <li><a href="services-modern.html">Services modern</a></li>
-                                                </ul>
--->
+
                                         </li>
                                         <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="teleconference.html">Conference Calls</a>
-                                            <!--
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="contact-us-simple.html">Contact simple</a></li>
-                                                    <li><a href="contact-us-classic.html">Contact classic</a></li>
-                                                    <li><a href="contact-us-classic-02.html">Contact classic – style 02</a></li>
-                                                    <li><a href="contact-us-modern.html">Contact modern</a></li>
-                                                </ul>
--->
+
                                         </li>
                                         <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="digital-roadshows.html">Digital Roadshows </a>
-                                            <!--
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="team-simple.html">Team simple</a></li>
-                                                    <li><a href="team-classic.html">Team classic</a></li>
-                                                </ul>
--->
+
                                         </li>
                                         <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="IPO-Listings.html">IPO Listings</a>
-                                            <!--
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="our-clients.html">Our clients</a></li>
-                                                    <li><a href="404.html">Error 404</a></li>
-                                                    <li><a href="coming-soon.html">Coming soon</a></li>
-                                                    <li><a href="coming-soon-02.html">Coming soon – style 02</a></li>
-                                                    <li><a href="faq.html">Faq</a></li>
-                                                    <li><a href="maintenance.html">Maintenance</a></li>
-                                                    <li><a href="search-result.html">Search result</a></li>
-                                                    <li><a href="pricing.html">Pricing</a></li>
-                                                </ul>
--->
+
                                         </li>
 
                                         <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="transcription.html">Transcription</a>
-                                            <!--
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="team-simple.html">Team simple</a></li>
-                                                    <li><a href="team-classic.html">Team classic</a></li>
-                                                </ul>
--->
+
                                         </li>
 
                                         <li class="dropdown">
                                             <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Video Production</a>
-                                            <!--
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="team-simple.html">Team simple</a></li>
-                                                    <li><a href="team-classic.html">Team classic</a></li>
-                                                </ul>
--->
+
                                         </li>
 
                                         <li class="dropdown">
@@ -186,12 +147,19 @@
                                         </li>
 
                                         <li class="dropdown">
-                                            <a class="dropdown-toggle" data-toggle="dropdown" href="Javascript: void(0);">Content Writting</a>
+                                            <a class="dropdown-toggle" data-toggle="dropdown" href="content-writting.html">Content Writing</a>
 
                                         </li>
 
                                     </ul>
                                 </li>
+
+                                <!-- =========================================Fintech-investor============================================= -->
+
+
+
+
+
 
                                 <!-- ==================================ENQUIRE==================================================== -->
 
@@ -199,7 +167,7 @@
                                     <a href="javascript:void(0);">Enquire</a>
                                     <i class="fa fa-angle-down dropdown-toggle" data-toggle="dropdown" aria-hidden="true"></i>
                                     <!-- start sub menu -->
-                                    <ul class="dropdown-menu spacing-115 animated" role="menu" style="top: 72px;">
+                                    <ul class="dropdown-menu spacing-115 animated" style="margin-top: -20px !important; top: 72px;" role="menu">
 
 
                                         <!--  ============================OUR SERVICES MORE DROPDOWN====================================       -->
@@ -244,7 +212,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="header-social-icon xs-display-none">
+                        <div class="header-social-icon xs-display-none" style="border-left:1px solid red;">
                             <a href="https://www.facebook.com/boardroommedia" title="Facebook" target="_blank">
                                 <i class="fa fa-facebook" aria-hidden="true"></i>
                             </a>
